--- a/GoodsManager/Components/Layout/NavMenu.razor
+++ b/GoodsManager/Components/Layout/NavMenu.razor
@@ -19,5 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="test">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> test
+            </NavLink>
+        </div>
     </nav>
 </div>
