--- a/MudBlazorPR/Pages1/Counter1.razor
+++ b/MudBlazorPR/Pages1/Counter1.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+﻿@page "/counter2"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Counter1</PageTitle>
 
-<h1>Counter</h1>
+<h1>Counter1</h1>
 
 <p role="status">Current count: @currentCount</p>
 
@@ -15,5 +15,4 @@
     {
         currentCount++;
     }
-
 }
