added pagination for Product

--- a/MudBlazorPR/Components/Layout/NavMenu.razor
+++ b/MudBlazorPR/Components/Layout/NavMenu.razor
@@ -2,4 +2,5 @@
     <MudNavLink Href="home" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="users" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Users</MudNavLink>
     <MudNavLink Href="adding-product" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Adding Product</MudNavLink>
+    <MudNavLink Href="products" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Adding Product</MudNavLink>
 </MudNavMenu>
