--- a/MudBlazorPR/Components/Pages/UserPage.razor
+++ b/MudBlazorPR/Components/Pages/UserPage.razor
@@ -4,9 +4,9 @@
 @using MudBlazor.Components.DialogWindows
 @using ReferenceClass.Models
 
-<PageTitle>Users</PageTitle>
+<PageTitle>UserPage</PageTitle>
 
-<MudText Typo="Typo.h4" GutterBottom="true">Users Table</MudText>
+<MudText Typo="Typo.h4" GutterBottom="true">UserPage Table</MudText>
 
 <div class="mb-4 d-flex gap-2">
     <MudTextField @bind-Value="SearchQuery"
@@ -28,12 +28,12 @@
 }
 else
 {
-    <MudTable Items="UsersList" Hover="true" SortLabel="Sort By" Elevation="1" Dense="true">
+    <MudTable Items="pageDate.Items" Hover="true" SortLabel="Sort By" Elevation="1" Dense="true">
         <HeaderContent>
             <MudTh><MudTableSortLabel SortBy="new Func<User, object>(x => x.Id)">Id</MudTableSortLabel></MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<User, object>(x => x.Name)">Name</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<User, object>(x => x.Address)">Address</MudTableSortLabel></MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<User, object>(x => x.Phone)">Phone</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<User, object>(x => x.Address)">Address</MudTableSortLabel></MudTh>
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
@@ -60,9 +60,9 @@ else
 }
 
 @code {
-    private IEnumerable<User> UsersList { get; set; } = Enumerable.Empty<User>();
-    private UserDto? UserDtos { get; set; }
 
+    private PageData<User> pageDate = new();
+    
     private int CurrentPage = 1;
     private int TotalPages = 1;
     private int PageSize = 10;
@@ -80,22 +80,22 @@ else
         try
         {
             string url = $"http://localhost:5191/User/UserPagination?Page={CurrentPage}&PageSize={PageSize}";
-            UserDtos = await Http.GetFromJsonAsync<UserDto>(url);
+            pageDate = await Http.GetFromJsonAsync<PageData<User>>(url);
 
-            if (UserDtos?.Users != null)
+            if (pageDate != null)
             {
-                UsersList = UserDtos.Users;
-                TotalPages = (int)Math.Ceiling((double)UserDtos.TotalCount / PageSize);
+                TotalPages = (int)Math.Ceiling((double)pageDate.TotalCount / PageSize);
+                
             }
             else
             {
-                UsersList = Enumerable.Empty<User>();
+                pageDate.Items = [];
             }
         }
         catch (Exception ex)
         {
             Console.WriteLine("Error loading users: " + ex.Message);
-            UsersList = Enumerable.Empty<User>();
+            pageDate.Items = [];
         }
         IsLoading = false;
     }
@@ -198,7 +198,7 @@ else
         try
         {
             string url = $"http://localhost:5191/User/Search?Text={Uri.EscapeDataString(SearchQuery)}";
-            UsersList = await Http.GetFromJsonAsync<IEnumerable<User>>(url) ?? Enumerable.Empty<User>();
+            pageDate.Items = await Http.GetFromJsonAsync<IEnumerable<User>>(url) ?? Enumerable.Empty<User>();
 
             TotalPages = 1;
             CurrentPage = 1;
@@ -206,7 +206,7 @@ else
         catch (Exception ex)
         {
             Console.WriteLine("Search error: " + ex.Message);
-            UsersList = Enumerable.Empty<User>();
+            pageDate.Items = [];
         }
         IsLoading = false;
         StateHasChanged();
